<resources>
    <string name="app_name">Session02</string>
    <string name="bill_please">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="no_of_pax">No. of Pax</string>
    <string name="GST">GST</string>
    <string name="NO_SVS">NO SVS</string>
    <string name="total_bill">Total Bill:</string>
    <string name="each_pays">Each Pays:</string>
    <string name="reset">RESET</string>
    <string name="split">SPLIT</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="gst">GST</string>
    <string name="svs">SVS</string>
    <string name="no_svs">NO SVS</string>
    <string name="no_gst_">NO GST</string>
    <string name="gst_">GST</string>
    <string name="phone_number">Phone number</string>
</resources>