<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewBill"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/bill_please"
        android:textColorHighlight="#8E5A5A" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="text" />

    <TextView
        android:id="@+id/textViewAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/editTextAmt"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:ems="10"
        android:hint="Enter Amount"
        android:inputType="text" />

    <TextView
        android:id="@+id/textViewNoPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_of_pax" />

    <EditText
        android:id="@+id/editTextEnterNo"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:ems="10"
        android:hint="Enter number"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <ToggleButton
            android:id="@+id/toggleButtonNoSvs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NO_SVS"
            android:textOff="@string/no_svs"
            android:textOn="@string/svs" />

        <ToggleButton
            android:id="@+id/toggleButtonGST"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/GST"
            android:textOff="@string/no_gst_"
            android:textOn="@string/gst_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Discount(%)" />

        <EditText
            android:id="@+id/editTextDiscount"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:ems="10"
            android:hint="Enter Discount"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radioGrpPay"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButtonPayNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paynow" />

            <RadioButton
                android:id="@+id/radioButtonCash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cash" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonSplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/split" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="Total"
            android:text="@string/total_bill" />

        <TextView
            android:id="@+id/textViewEach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/each_pays" />
    </LinearLayout>

</LinearLayout>